--- a/security/src/main/resources/application.properties
+++ b/security/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username=root
 spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT Settings
 jwt.secret=your_secret_key
