--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,16 @@
-version: "3"
 services:
-  nginx:
+  vennekredsen:
+    container_name: vennekredsen-hjemmeside
+    restart: unless-stopped
     image: nginx:latest
     ports:
-      - "8080:8080"
+      - "85:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./html:/usr/share/nginx/html
+    networks:
+      - cloudflare
+
+networks:
+  cloudflare:
+    external: true
