--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,26 +6,27 @@ on:
       - main
 
 jobs:
-  build-and-publish:
+  vennekredsen:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ secrets.GHCR_USERNAME }}
-          password: ${{ secrets.GHCR_TOKEN }}
+      - name: Setup Docker
+        uses: docker/setup-buildx-action@v2
+
+#      - name: Log in to GitHub Container Registry
+#        uses: docker/login-action@v2
+#        with:
+#          registry: ghcr.io
+#          username: ${{ secrets.GHCR_USERNAME }}
+#          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build and publish a Docker image for ${{ github.repository }}
-        uses: docker/build-push-action@v4
+        uses: macbre/push-to-ghcr@master
         with:
           context: .
           dockerfile: ./Dockerfile
           image_name: ${{ github.repository }}-vennekredsen
           github_token: ${{ secrets.GHCR_TOKEN }}
-          push: true
-          tags: ghcr.io/${{ github.repository }}:latest
