--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,5 @@ jobs:
           dockerfile: ./Dockerfile
           image_name: ${{ github.repository }}-vennekredsen
           github_token: ${{ secrets.GHCR_TOKEN }}
+          push: true
+          tags: ghcr.io/${{ github.repository | toLowerCase }}-vennekredsen:latest
