--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
         with:
           context: .
           dockerfile: ./Dockerfile
-          image_name: ${{ github.repository | toLowerCase }}-vennekredsen
+          image_name: ${{ lowercase(github.repository) }}-vennekredsen
           github_token: ${{ secrets.GHCR_TOKEN }}
