--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
 #          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build and publish a Docker image for ${{ github.repository }}
-        uses: macbre/push-to-ghcr@master
+        uses: docker/build-push-action@v4
         with:
           context: .
           dockerfile: ./Dockerfile
