--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,19 +16,16 @@ jobs:
       - name: Setup Docker
         uses: docker/setup-buildx-action@v2
 
-#      - name: Log in to GitHub Container Registry
-#        uses: docker/login-action@v2
-#        with:
-#          registry: ghcr.io
-#          username: ${{ secrets.GHCR_USERNAME }}
-#          password: ${{ secrets.GHCR_TOKEN }}
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.GHCR_USERNAME }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build and publish a Docker image for ${{ github.repository }}
         uses: docker/build-push-action@v4
         with:
           context: .
-          dockerfile: ./Dockerfile
-          github_token: ${{ secrets.GHCR_TOKEN }}
-          image_name: 'vennekredsen:latest'
           push: true
           tags: 'ghcr.io/jfriisj/vennekredsen:latest'
