--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,18 +8,18 @@ on:
 jobs:
   vennekredsen:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Login to GitHub Container Registry
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
-
-      - name: Build and publish a Docker image for ${{ github.repository }}
-        uses: docker/build-push-action@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v6
         with:
-          context: .
           push: true
-          tags: 'ghcr.io/jfriisj/vennekredsen:latest'
+          tags: jfriisj/vennekredsen:latest
