--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,17 +9,12 @@ jobs:
   vennekredsen: # This is the name of the job
     runs-on: ubuntu-latest
     steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build and push
-        uses: docker/build-push-action@v6
+        uses: macbre/push-to-ghcr@master
         with:
-          push: true
-          tags: jfriisj/vennekredsen:latest
+          image_name: 'jfriisj/vennekredsen:latest'
+          github_token: ${{ secrets.TOKEN }}
