added api and form

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,26 @@
-name: Publish Docker Image
+name: Docker Image CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  vennekredsen: # This is the name of the job
+  build:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Build and push
-        uses: macbre/push-to-ghcr@master
-        with:
-          image_name: 'jfriisj/vennekredsen'
-          github_token: ${{ secrets.TOKEN }}
+    - uses: actions/checkout@v3
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+      
+    - name: Build the Docker image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        push: false
+        tags: vennekredsen:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
