--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Compose CI
 
 on:
   push:
@@ -11,22 +11,44 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Check out repository
+    - name: Checkout repository
       uses: actions/checkout@v4
       
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       
-    - name: Build Docker image
+    # Build and test API image
+    - name: Build API Docker image
       uses: docker/build-push-action@v5
       with:
-        context: .
-        file: ./Dockerfile
+        context: ./api
+        file: ./api/Dockerfile
         push: false
         load: true
-        tags: user/vennekredsen:latest
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+        tags: vennekredsen-api:latest
+        cache-from: type=gha,scope=api
+        cache-to: type=gha,scope=api,mode=max
         
-    - name: Verify Docker image
-      run: docker image ls
+    # Build and test Frontend image  
+    - name: Build Frontend Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: ./frontend
+        file: ./frontend/Dockerfile
+        push: false
+        load: true
+        tags: vennekredsen-frontend:latest
+        cache-from: type=gha,scope=frontend
+        cache-to: type=gha,scope=frontend,mode=max
+        
+    # Test with docker-compose
+    - name: Test with docker-compose
+      run: |
+        docker image ls
+        docker-compose config
+        docker-compose build
+        docker-compose up -d
+        sleep 10
+        docker-compose ps
+        docker-compose logs
+        docker-compose down
