--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Docker Compose CI
+name: Docker CI/CD
 
 on:
   push:
@@ -7,17 +7,17 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
       
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       
-    # Build and test API image
+    # Build API image
     - name: Build API Docker image
       uses: docker/build-push-action@v5
       with:
@@ -28,8 +28,8 @@ jobs:
         tags: vennekredsen-api:latest
         cache-from: type=gha,scope=api
         cache-to: type=gha,scope=api,mode=max
-        
-    # Build and test Frontend image  
+    
+    # Build Frontend image
     - name: Build Frontend Docker image
       uses: docker/build-push-action@v5
       with:
@@ -40,15 +40,15 @@ jobs:
         tags: vennekredsen-frontend:latest
         cache-from: type=gha,scope=frontend
         cache-to: type=gha,scope=frontend,mode=max
-        
-    # Test with docker-compose
-    - name: Test with docker-compose
+    
+    # Test with Docker Compose V2
+    - name: Test with Docker Compose
       run: |
         docker image ls
-        docker-compose config
-        docker-compose build
-        docker-compose up -d
-        sleep 10
-        docker-compose ps
-        docker-compose logs
-        docker-compose down
+        docker compose config
+        docker compose build
+        docker compose up -d
+        sleep 10  # Give services time to start
+        docker compose ps
+        docker compose logs
+        docker compose down
