--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "85:80"
     networks:
-      - vennekredsen_net
+      - cloudflare
     depends_on:
       - api
 
@@ -20,7 +20,7 @@ services:
       - FLASK_APP=app.py
       - FLASK_ENV=production
     networks:
-      - vennekredsen_net
+      - cloudflare
     depends_on:
       - db
 
@@ -35,10 +35,11 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
     networks:
-      - vennekredsen_net
+      - cloudflare
 
 networks:
-  vennekredsen_net:
+  cloudflare:
+    external: true
 
 volumes:
   db_data:
