--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,54 +1,47 @@
-name: Docker CI/CD
+name: Test with Docker Compose
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
-      
+      uses: actions/checkout@v2
+
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-      
-    # Build API image
-    - name: Build API Docker image
-      uses: docker/build-push-action@v5
+      uses: docker/setup-buildx-action@v1
+
+    - name: Cache Docker layers
+      uses: actions/cache@v2
       with:
-        context: ./api
-        file: ./api/Dockerfile
-        push: false
-        load: true
-        tags: vennekredsen-api:latest
-        cache-from: type=gha,scope=api
-        cache-to: type=gha,scope=api,mode=max
-    
-    # Build Frontend image
-    - name: Build Frontend Docker image
-      uses: docker/build-push-action@v5
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
       with:
-        context: ./frontend
-        file: ./frontend/Dockerfile
-        push: false
-        load: true
-        tags: vennekredsen-frontend:latest
-        cache-from: type=gha,scope=frontend
-        cache-to: type=gha,scope=frontend,mode=max
-    
-    # Test with Docker Compose V2
-    - name: Test with Docker Compose
-      run: |
-        docker image ls
-        docker compose config
-        docker compose build
-        docker compose up -d
-        sleep 10  # Give services time to start
-        docker compose ps
-        docker compose logs
-        docker compose down
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: user/app:latest
+
+    - name: Run Docker Compose
+      run: docker compose -f vennekredsen/docker-compose.yml up -d --build
