--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,12 +36,21 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
 
-    - name: Build and push
+    - name: Build and push frontend
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: ./frontend
+        file: ./frontend/Dockerfile
         push: true
-        tags: user/app:latest
+        tags: user/frontend:latest
+
+    - name: Build and push api
+      uses: docker/build-push-action@v2
+      with:
+        context: ./api
+        file: ./api/Dockerfile
+        push: true
+        tags: user/api:latest
 
     - name: Run Docker Compose
       run: docker compose -f vennekredsen/docker-compose.yml up -d --build
