--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Test with Docker Compose
+name: CI/CD Pipeline
 
 on:
   push:
@@ -27,11 +27,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-buildx-
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -42,15 +43,15 @@ jobs:
         context: ./frontend
         file: ./frontend/Dockerfile
         push: true
-        tags: user/frontend:latest
+        tags: ghcr.io/${{ github.repository }}/frontend:latest
 
-    - name: Build and push api
+    - name: Build and push API
       uses: docker/build-push-action@v2
       with:
         context: ./api
         file: ./api/Dockerfile
         push: true
-        tags: user/api:latest
+        tags: ghcr.io/${{ github.repository }}/api:latest
 
     - name: Run Docker Compose
       run: docker compose -f vennekredsen/docker-compose.yml up -d --build
