--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   vennekredsen:
     container_name: vennekredsen-hjemmeside
     restart: unless-stopped
-    build: ./frontend
+    image: ghcr.io/jfriisj/vennekredsen/frontend:latest
     ports:
       - "85:80"
     networks:
@@ -16,10 +16,14 @@ services:
   api:
     container_name: vennekredsen-api
     restart: unless-stopped
-    build: ./api
+    image: ghcr.io/jfriisj/vennekredsen/api:latest
     environment:
       - FLASK_APP=app.py
       - FLASK_ENV=production
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - JWT_SECRET=${JWT_SECRET}
     networks:
       - vennekredsen_net
       - cloudflare
@@ -38,13 +42,13 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ./api/init.sql:/docker-entrypoint-initdb.d/init.sql  # This line ensures init.sql runs on startup
+      - ./api/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - vennekredsen_net
       
   cloudflare_tunnel:
     image: cloudflare/cloudflared:latest
-    container_name: vennekredsen_cloudflare_tunnel  # Changed name to be unique
+    container_name: vennekredsen_cloudflare_tunnel
     restart: unless-stopped
     environment:
       - TUNNEL_TOKEN=${INTERNAL_TOKEN}
