--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -69,6 +69,8 @@ jobs:
       - name: Run Safety (dependency security check)
         run: |
           cd api
+          # Note: Using 'check' command despite deprecation warning
+          # New 'scan' command requires authentication unsuitable for CI/CD
           safety check
 
       - name: Run Tests
